# trymodlmcp

./: .gitignore  Anchor.toml  LICENSE  README.md  basic-commit-generator.ps1  commit-generator.ps1  create-commit-history.ps1  generate-commits-with-changes.ps1  package.json  simple-commit-generator.ps1  tsconfig.json
docs/: convert-format.md  process-context.md
programs/shift-attestation/: Cargo.toml
programs/shift-attestation/src/: lib.rs
programs/shift-core/: Cargo.toml
programs/shift-core/src/: lib.rs
programs/shift-encumbrance/: Cargo.toml
programs/shift-encumbrance/src/: lib.rs
programs/shift-p2p/: Cargo.toml
programs/shift-p2p/src/: lib.rs
python/ai/: connect_blockchain_module.py  language_model.py  model_manager.py  process_context_module.py  transfer_tokens_module.py  vision_model.py
python/examples/: blockchain_integration.py
python/mcp/: model_context.py
python/utils/: blockchain.py  transfer_tokens_module.py
sdk/: attestation.ts  core.ts  encumbrance.ts  index.ts  p2p.ts  types.ts  utils.ts
solana/clients/token-client/: index.ts
solana/programs/ai_model_registry/src/: process_context_module.rs
solana/programs/mcp_token/src/: handle_error_module.rs  lib.rs  register_model_module.rs
tests/: shift-core.ts
