[package]
name = "shift-attestation"
version = "0.1.0"
description = "Hardware attestation program for Shift protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shift_attestation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
solana-program = "1.18.0"
borsh = "0.10.3"
sha2 = "0.10.8"
sha3 = "0.10.8"
curve25519-dalek = "4.1.1"
ed25519-dalek = "2.1.0"
x509-parser = "0.15.0"
getrandom = { version = "0.2", features = ["custom"] } 