[package]
name = "shift-p2p"
version = "0.1.0"
description = "P2P transaction program for Shift protocol - direct peer-to-peer transfers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shift_p2p"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-program = "1.18.0"
spl-token = "4.0.0"
borsh = "0.10.3"
sha2 = "0.10.8"
curve25519-dalek = "4.1.1"
ed25519-dalek = "2.1.0"
getrandom = { version = "0.2", features = ["custom"] } 